--- a/qqbot/yuri/requirements.txt
+++ b/qqbot/yuri/requirements.txt
@@ -1,52 +1,67 @@
-acme==2.9.0
-blinker==1.7.0
-certbot==2.9.0
-certbot-nginx==2.9.0
-certifi==2023.11.17
-chardet==5.2.0
-ConfigArgParse==1.7
-configobj==5.0.8
-cryptography==41.0.7
-cupshelpers==1.0
-dbus-python==1.3.2
-distro==1.9.0
-dnspython==2.6.1
-gpg==1.18.0
-gyp==0.1
-httplib2==0.20.4
-idna==3.6
-josepy==1.14.0
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-Markdown==3.5.2
-markdown-it-py==3.0.0
-mdurl==0.1.2
-oauthlib==3.2.2
-packaging==24.0
-parsedatetime==2.6
-psutil==5.9.8
-pycairo==1.25.1
-pycups==2.0.1
-Pygments==2.17.2
-PyGObject==3.48.2
-PyICU==2.12
-PyJWT==2.7.0
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyRFC3339==1.1
-python-apt==2.7.7+ubuntu5
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-setuptools==68.1.2
-six==1.16.0
-speedtest-cli==2.1.3
-ssh-import-id==5.11
-systemd-python==235
-urllib3==2.0.7
-wadllib==1.3.6
-wheel==0.42.0
-xdg==5
+aiomysql==0.2.0
+alembic==1.16.5
+annotated-types==0.7.0
+anyio==4.10.0
+arclet-alconna==1.8.40
+arclet-alconna-tools==0.7.11
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+concurrent-utils==0.2.0
+cryptography==44.0.3
+exceptiongroup==1.3.0
+fastapi==0.116.1
+filetype==1.2.0
+greenlet==3.2.4
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.7.0
+loguru==0.7.3
+Mako==1.3.10
+MarkupSafe==3.0.2
+meme_generator==0.2.2
+msgpack==1.1.1
+multidict==6.6.4
+nepattern==0.7.7
+nonebot-adapter-onebot==2.4.6
+nonebot-adapter-qq==1.6.5
+nonebot-plugin-alconna==0.59.4
+nonebot-plugin-localstore==0.7.4
+nonebot-plugin-orm==0.8.2
+nonebot-plugin-uninfo==0.9.0
+nonebot-plugin-waiter==0.8.1
+nonebot2==2.4.3
+nonebot_plugin_memes==0.8.1
+nonestorage==0.1.0
+propcache==0.3.2
+psutil==7.0.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pygtrie==2.5.0
+PyMySQL==1.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+requests==2.32.5
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+starlette==0.47.2
+tarina==0.6.8
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+yarl==1.20.1
+zipp==3.23.0
