--- a/qqbot/codetf/pyproject.toml
+++ b/qqbot/codetf/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "yuri"
+name = "codetf"
 version = "0.1.0"
-description = "yuri"
+description = "codetf"
 readme = "README.md"
 requires-python = ">=3.9, <4.0"
 
@@ -10,6 +10,6 @@ adapters = [
     { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
     { name = "QQ", module_name = "nonebot.adapters.qq" }
 ]
-plugins = ["nonebot_plugin_memes", "nonebot_plugin_htmlrender", "nonebot_plugin_groupmate_waifu", "nonebot_plugin_wife"]
+plugins = ["nonebot_plugin_htmlrender", "nonebot_plugin_simple_block", "nonebot_plugin_code"]
 plugin_dirs = ["plugins"]
-builtin_plugins = ["echo"]
+builtin_plugins = ["echo", "single_session"]
